--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div.cls_007{font-family:Arial,serif;font-size:9.8px;color:rgb(255,255,255);font-
 <body>
 <div style="position:absolute;left:50%;margin-left:-297px;top:0px;width:594px;height:841px;border-style:outset;overflow:hidden">
 <div style="position:absolute;left:0px;top:0px">
-<img src="2257abd4-6b36-11ea-8b25-0cc47a792c0a_id_2257abd4-6b36-11ea-8b25-0cc47a792c0a_files/background1.jpg" width=594 height=841></div>
+<img src="img//background1.jpg" width=594 height=841></div>
 <div style="position:absolute;left:29.97px;top:20.81px" class="cls_002"><span class="cls_002">MONTIQUE STEVENS</span></div>
 <div style="position:absolute;left:29.97px;top:67.27px" class="cls_003"><span class="cls_003">Web:</span></div>
 <div style="position:absolute;left:117.72px;top:67.27px" class="cls_003"><span class="cls_003"> </span><A HREF="http://www.nycbeardo.design/">www.nycbeardo.design</A> </div>
